tests/fixtures/invalid/w018/missing_test_links.spec
behavior missing_tests "Missing Tests" {
  contract """input MUST be validated"""
  verify unit "checks validation"
}
